Change design types to BIATSP
As a developer focused platform, we won't be sharing Furniture and Architectural design. :)

I've updated the elements to be associated with the BIATSP:
Business Architecture
Information Architecture
Application Architecture
Technology Architecture
and
Security & Privacy

As well as kept the Hardware designs as that would remain relevent.

--- a/_data/i18n/defaultTypes.yml
+++ b/_data/i18n/defaultTypes.yml
@@ -1,24 +1,24 @@
 ---
 - type:
-    en: Architecture
-    fr: Architecture
+    en: Business
+    fr: Entreprise
 
 - type:
-    en: Furniture
-    fr: Mobilier
+    en: Information
+    fr: Information
 
 - type:
-    en: Software
-    fr: Logiciel
+    en: Application
+    fr: Application
+
+- type:
+    en: Technology
+    fr: Technologie
+  
+- type:
+    en: Security & Privacy
+    fr: Sécurité et confidentialité
 
 - type:
     en: Hardware
     fr: Matériel
-  
-- type:
-    en: Medical
-    fr: Médical
-
-- type:
-    en: Industrial
-    fr: Industriel
