--- a/_data/i18n/tables.yml
+++ b/_data/i18n/tables.yml
@@ -76,6 +76,9 @@ usage:
 usedBy:
   en: Is being used by
   fr: Est utilisé par
+design:
+  en: Design
+  fr: Design
 designType:
   en: Design type(s)
   fr: Type(s) de design
