--- a/_data/i18n/defaultTypes.yml
+++ b/_data/i18n/defaultTypes.yml
@@ -20,5 +20,9 @@
     fr: Sécurité et confidentialité
 
 - type:
+    en: Service & Interaction
+    fr: Service et interaction
+    
+- type:
     en: Hardware
     fr: Matériel
