--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -243,6 +243,12 @@ presets:
       spdxID:
         en: Search the list of licenses to find the SPDX license identifier according to the project license's name. Add the URLs of the license's repository.
         fr: Choisissez l'identifiant SPDX de la licence utilisée selon son nom, en consultant la liste des licences. Ajoutez les URLs pour accéder au fichier de la licence du projet.
+      level:
+        en: License level within the project, if it covers the whole project or only a section
+        fr: Niveau de la license dans le projet, si elle couvre tout le projet ou seulement une section
+      scope:
+        en: Scope of the sub license within the project, only applicable when 'sub license' level is selected
+        fr: Portée de la sous license dans le projet, seulement applicable lorsque le niveau 'sous license' est selectionné
     titles:
       URL:
         en: The English and French URLs of licence.
@@ -486,16 +492,10 @@ presets:
       sub:
         en: Sub license
         fr: Sous license
-    infobulle:
-      en: License level within the project
-      fr: Niveau de la license dans le projet
   licensesScope:
     title:
       en: License scope
       fr: Portée de la license
-    infobulle:
-      en: Scope of the sub license within the project
-      fr: Portée de la sous license dans le projet
     
 # Code form specifics
 code:
