Script works, working on the dependencies page

--- a/_data/i18n/general.yml
+++ b/_data/i18n/general.yml
@@ -77,6 +77,12 @@ nav:
     link:
       en: ./stats.html
       fr: ./stats.html
+  dependencies:
+    en: Dependencies
+    fr: Dépendances
+    link:
+      en: ./dependencies.html
+      fr: ./dependencies.html
   Canada:
     en: Government of Canada
     fr: Gouvernement du Canada
