Should fix html proofer issue

--- a/_data/i18n/general.yml
+++ b/_data/i18n/general.yml
@@ -82,7 +82,7 @@ nav:
     fr: Dépendances
     link:
       en: ./dependencies.html
-      fr: ./dependencies.html
+      fr: ./dependances.html
   Canada:
     en: Government of Canada
     fr: Gouvernement du Canada
